# Philote-Cpp

./: .clang-format  .codecov.yml  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  fix_integration_tests.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  general.md
.github/workflows/: build.yml  coverage.yml  documentation.yml  release.yml
cmake/: CodeCoverage.cmake  GenerateGrpc.cmake
docs/: Doxyfile  README.md  best_practices.md  client_usage.md  coding_style.md  explicit_disciplines.md  getting_started.md  implicit_disciplines.md  installation.md  mainpage.md  release_process.md  variables.md
examples/: CMakeLists.txt
examples/paraboloid/: CMakeLists.txt  paraboloid_client.cpp  paraboloid_server.cpp
examples/quadratic/: CMakeLists.txt  quadratic_client.cpp  quadratic_server.cpp
examples/rosenbrock/: CMakeLists.txt  rosenbrock_client.cpp  rosenbrock_server.cpp
include/: CMakeLists.txt  discipline.h  discipline_client.h  discipline_server.h  explicit.h  implicit.h  variable.h
scripts/: update_copyright.py
src/: CMakeLists.txt
src/discipline/: CMakeLists.txt  discipline.cpp  discipline_client.cpp  discipline_server.cpp
src/explicit/: CMakeLists.txt  explicit_client.cpp  explicit_discipline.cpp  explicit_server.cpp
src/implicit/: CMakeLists.txt  implicit_client.cpp  implicit_discipline.cpp  implicit_server.cpp
src/utils/: CMakeLists.txt  variable.cpp
test/: CMakeLists.txt  client_timeout_test.cpp  discipline_cancellation_test.cpp  discipline_client_test.cpp  discipline_server_test.cpp  discipline_test.cpp  explicit_client_test.cpp  explicit_discipline_server_test.cpp  explicit_discipline_test.cpp  explicit_error_scenarios_test.cpp  explicit_integration_test.cpp  implicit_client_test.cpp  implicit_discipline_server_test.cpp  implicit_discipline_server_test.cpp.bak  implicit_discipline_test.cpp  implicit_error_scenarios_test.cpp  implicit_integration_test.cpp  pair_dict_tests.cpp  test_helpers.cpp  test_helpers.h  variable_edge_cases_tests.cpp  variable_tests.cpp
